--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> 
-    
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.jpg" />
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -19,21 +20,20 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <Helmet>
-      <title>My-Legal Solutions</title>
-      <meta name="viewport" content="width=device-width, initial-scale=1" />
-      <meta name="theme-color" content="#000000" />
-      <meta name="description"
-        content="For your organization"
-      />
-    </Helmet>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-  </head>
-  
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+  <Helmet>
+    <title>My-Legal Solutions</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description"
+      content="MyLegal Solutions is an online Legal service provider, created to fill the need for understandable and efficient Legal solutions by offering you the convenience and quality of in-house and business Legal consultancy services and other facilities in the field of Law. Through our services, we give you the opportunity to get answers to all your legal questions Online, for which you would not have to make a trip into a law office. We also provide value to you by simplifying the communication process between Client and Solicitor. We collect information beforehand and enlist lawyers practicing in that area of your problem. We also save the amount of time and money you spend consulting with a lawyer to determine you have a case or not. Responses to your questions, which are given by our team of lawyers are personalized and tailored to your specific situation and we treat every issue you bring to us as private and confidential. Our system provides you with information that enables you to make right decisions." />
+  </Helmet>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -43,5 +43,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+
 </html>
